<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.routee_commerce.ui.userAuthentication.fragments.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_outside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.userAuthentication.fragments.login.LoginFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="140dp"
                    android:layout_marginVertical="30dp"
                    android:src="@drawable/logo_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/welcome_Back_to_route"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sign_in_with_your_mail"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email_address"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.emailError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.passwordError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hapticFeedbackEnabled="true"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/btn_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_in"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ic_next"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:indeterminateTint="@color/blue"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/don_t_have_an_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/g_don_t_have_an_account_sign_up"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
