<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.routee_commerce.ui.userAuthentication.fragments.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_outside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            tools:context=".ui.userAuthentication.fragments.register.RegisterFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="-96dp"
                tools:layout_editor_absoluteY="73dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="140dp"
                    android:layout_marginVertical="30dp"
                    android:src="@drawable/logo_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/user_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.username}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.usernameError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/mobile_number"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/phone_number_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_mobile_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.phoneNumber}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.phoneNumberError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email_address"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.emailError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.passwordError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/password_confirmation"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password_confirmation_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/edit_text_rounded"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password_confirmation"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="18dp"
                    android:text="@={vm.passwordConfirmation}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    app:Error="@{vm.passwordConfirmationError}"
                    app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                <TextView
                    android:id="@+id/login_do_have_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/g_do_you_have_an_account_sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hapticFeedbackEnabled="true"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/btn_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_up"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ic_next"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:indeterminateTint="@color/blue"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>